<resources>
    <string name="channel_name">Show media controls</string>
    <string name="channel_description">Notification channel to display the media controls.</string>
    <string name="button_pause">Pause</string>
    <string name="button_play">Play</string>
    <string name="button_replay">Replay</string>
    <string name="button_backward">Backward</string>
    <string name="button_forward">Forward</string>
    <string name="button_bookmark">Bookmark</string>
    <string name="no_albums">It\'s a bit empty here. Start by adding a directory to your library.</string>
    <string name="no_directories">No directories added yet.</string>
    <string name="no_audio_files">No audio files found in this album.</string>
    <string name="play_error">The selected audio file is not playable. Maybe the file does not exist anymore.</string>
    <string name="permission_denied">Necessary permission was not granted. Quit AudioAnchor.</string>
    <string name="video_permission_rationale_title">Why does AudioAnchor need video access?</string>
    <string name="video_permission_rationale_message">Some audio files, such as .webm, .mkv or .3gp files, are categorized as video by Android even though they only contain audio. Without this permission, Android hides those files from AudioAnchor entirely, so they won\'t show up in your library. AudioAnchor does not access your actual video files.</string>
    <string name="write_permission_denied">Necessary permission was not granted. Cannot write to storage.</string>
    <string name="storage_permission_rationale_title">Why does AudioAnchor need All files access?</string>
    <string name="storage_permission_rationale_message">On this version of Android, deleting audio files directly from your device requires the \"All files access\" permission. Without it, Android blocks the deletion. You\'ll be taken to the system settings screen to grant it; AudioAnchor only uses this to remove files you explicitly choose to delete.</string>
    <string name="time_format_error">Please enter a valid time in the format hh:mm:ss.</string>
    <string name="import_success">Import successful :)</string>
    <string name="import_fail">Something went wrong. Import failed.</string>
    <string name="export_success">Exported database</string>
    <string name="export_fail">Something went wrong. Export failed.</string>
    <string name="synchronize_success">Synchronized library.</string>
    <string name="audio_file_error">There is a problem with the audio file \"%s\".</string>
    <string name="empty_title_error">Please enter a title for your bookmark.</string>
    <string name="jumped_to_bookmark">Jumped to bookmark \"%s\" at %s.</string>
    <string name="bookmark_deleted">Bookmark deleted.</string>
    <string name="bookmark_added_toast">Added bookmark \"%s\" at %s.</string>
    <plurals name="tracks_deleted">
        <item quantity="one">%d track deleted.</item>
        <item quantity="other">%d tracks deleted.</item>
    </plurals>
    <plurals name="tracks_removed_from_db">
        <item quantity="one">Removed %d track from your library.</item>
        <item quantity="other">Removed %d tracks from your library.</item>
    </plurals>
    <plurals name="quant_albums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="quant_tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="album_and_tracks_deleted">Deleted %s and %s.</string>
    <plurals name="albums_removed_from_db">
        <item quantity="one">Removed %d album from your library.</item>
        <item quantity="other">Removed %d albums from your library.</item>
    </plurals>
    <plurals name="directories_removed_from_db">
        <item quantity="one">Removed %d directory from your library.</item>
        <item quantity="other">Removed %d directories from your library.</item>
    </plurals>
    <string name="cannot_mark_as_not_started">Cannot mark currently playing track as not started.</string>
    <string name="cannot_mark_as_completed">Cannot mark currently playing track as completed.</string>
    <string name="path">Path: %s</string>
    <string name="directory_exists">The selected directory already exists in your library: %s.</string>
    <string name="parent_directory_exists">You can\'t add subdirectories of directories that already exist in your library:\n%s\n%s.</string>
    <string name="sub_directory_exists">You can\'t add parent directories of directories that already exist in your library:\n%s\n%s.</string>
    <string name="illegal_speed">The current file can\'t be played at speed %.1fx. Please select a different value.</string>
    <string name="settings_autoplay_label">Autoplay</string>
    <string name="settings_autoplay_restart_label">Replay tracks from beginning when playing next/previous track</string>
    <string name="settings_progress_percentage_label">Show progress in percent</string>
    <string name="settings_keep_deleted_label">Keep progress of deleted files in library</string>
    <string name="settings_auto_sync_startup_label">Automatically sync library on startup</string>
    <string name="settings_cover_from_metadata_label">Get cover image from metadata</string>
    <string name="settings_sleep_timer_category">Sleep timer</string>
    <string name="settings_sleep_fadeout_label">Fade out time</string>
    <string name="settings_shake_label">Shake to reset sleep timer</string>
    <string name="settings_shake_sensitivity_label">Shake sensitivity</string>
    <string name="settings_vibrate_shake_reset_label">Vibrate on reset by shake</string>
    <string name="settings_continue_until_end_label">Keep playing until end of current track</string>
    <string name="settings_title_from_metadata_label">Get track title from metadata</string>
    <string name="settings_display_cover_below_track_data_label">Display cover image below track information</string>
    <string name="settings_dark_label">Dark theme</string>
    <string name="settings_dark_theme_system_label">Follow system theme</string>
    <string name="settings_dark_theme_false_label">Light theme</string>
    <string name="settings_dark_theme_true_label">Dark theme</string>
    <string name="settings_autorewind_label">Autorewind time</string>
    <string name="settings_immediate_playback_label">Start playback immediately after selecting item</string>
    <string name="settings_duck_audio_label">Duck audio when playback is interrupted</string>
    <string name="settings_show_hidden_label">Show hidden files</string>
    <string name="settings_display_category">Display</string>
    <string name="settings_playback_category">Playback</string>
    <string name="settings_bookmarks_category">Bookmarks</string>
    <string name="settings_miscellaneous_category">Miscellaneous</string>
    <string name="settings_sort_order_by_title_label">By title</string>
    <string name="settings_sort_order_by_directory_label">By directory</string>
    <string name="settings_sort_order_by_progress_label">By progress</string>
    <string name="settings_sort_order_by_last_played_label">By last played</string>
    <string name="settings_sort_order_by_date_added_oldest_label">By date added (oldest first)</string>
    <string name="settings_sort_order_by_date_added_newest_label">By date added (newest first)</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="settings_sort_order_label">Album sort order</string>
    <string name="settings_track_sort_order_label">Track sort order</string>
    <string name="settings_track_sort_order_by_title_label">By title</string>
    <string name="settings_track_sort_order_by_date_added_oldest_label">By date added (oldest first)</string>
    <string name="settings_track_sort_order_by_date_added_newest_label">By date added (newest first)</string>
    <string name="settings_track_sort_order_by_progress_label">By progress</string>
    <string name="settings_track_sort_order_by_last_played_label">By last played</string>
    <string name="settings_add_last_play_position_bookmark_label">Add and update last and second to last play position bookmarks whenever play is pressed</string>
    <string name="settings_cover_on_lockscreen_label">Display cover image on lockscreen</string>
    <string name="settings_quick_bookmark_label">Add bookmark with a single click on the bookmark icon</string>
    <string name="settings_skip_intervals_category">Skip intervals</string>
    <string name="settings_forward_button_1">Forward button #1</string>
    <string name="settings_forward_button_2">Forward button #2</string>
    <string name="settings_backward_button_1">Backward button #1</string>
    <string name="settings_backward_button_2">Backward button #2</string>
    <string name="settings_notification_backward_button">Notification backward button</string>
    <string name="settings_notification_forward_button">Notification forward button</string>
    <string name="settings_skip_interval_msg">Skip interval for %s</string>
    <string name="settings_manage_external_storage_label">Request \"All files access\"</string>
    <string name="settings_manage_external_storage_summary">Needed to delete audio files from your device on this version of Android, and for a few uncommon audio containers, such as .webm, .mkv, or .3gp, that Android classifies as video and hides from AudioAnchor unless this is granted. Everything else, including playback of common formats like mp3, m4a/m4b, flac, wav, ogg, opus, aac, wma, gsm, and mid, works fine without it.</string>
    <string name="settings_manage_external_storage_granted">Currently granted.</string>
    <string name="settings_manage_external_storage_not_granted">Currently not granted.</string>
    <string name="settings_directory_picker_initial_path_label">Initial directory picker path</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="choose_directory">Add directory</string>
    <string name="settings">Settings</string>
    <string name="time_completed_percent">%d%% complete</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="go_to">Go to</string>
    <string name="set_bookmark">Set bookmark</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="about">About</string>
    <string name="export_db">Export database</string>
    <string name="import_db">Import database</string>
    <string name="synchronize">Synchronize</string>
    <string name="set_bookmark_name">Enter the name of the bookmark</string>
    <string name="set_bookmark_at">Set bookmark at</string>
    <string name="no_bookmarks">There are no bookmarks for this audio file yet.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="untitled_bookmark">Untitled</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="remove_from_db">Remove from library</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="mark_as_not_started">Mark as not started</string>
    <string name="mark_as_completed">Mark as completed</string>
    <plurals name="items_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="mark_all_as_not_started">Mark all tracks as not started</string>
    <string name="mark_all_as_completed">Mark all tracks as completed</string>
    <string name="playback_speed">Playback speed</string>
    <string name="about_contributors">For a list of contributors visit</string>
    <string name="about_report_bugs">This is also the place to report bugs, make a contribution yourself or leave a star if you like the app.</string>
    <string name="about_donations">If you like the app and wish to make a donation you can do so via</string>
</resources>