<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_from_device"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/menu_delete_from_db"
        android:title="@string/remove_from_db"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_mark_as_not_started"
        android:title="@string/mark_as_not_started"
        android:orderInCategory="102"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_mark_as_completed"
        android:title="@string/mark_as_completed"
        android:orderInCategory="103"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_pin"
        android:title="@string/pin"
        android:orderInCategory="104"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_unpin"
        android:title="@string/unpin"
        android:orderInCategory="105"
        app:showAsAction="never"/>
</menu>
