<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_show_directories"
        android:icon="@drawable/directory_ic"
        android:orderInCategory="100"
        android:title="@string/directories"
        app:showAsAction="never" />



    <item
        android:id="@+id/menu_export"
        android:orderInCategory="101"
        android:title="@string/export_db"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:orderInCategory="102"
        android:title="@string/import_db"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_synchronize"
        android:orderInCategory="103"
        android:title="@string/synchronize"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="104"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:orderInCategory="105"
        android:title="@string/about"
        app:showAsAction="never" />


</menu>